added celebrity tags and began adding images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,21 @@
     <div class="card-6 card">
         <h2 class="card-head">fAct 6</h2>
         <P>It is objectively the best Letter</P>
+    </div>
 </div>
+<div class="celebrities">
+    <div class="celeb abe">
+    <h2 class="hidden">Abraham Lincoln</h2>
+        
+    </div>
+    <div class="celeb" >
+
+    </div>
+    <div class= "celeb">
+
+    </div>
+
 </div>
+
 </body>
 </html>
