styled cards and flex wrapped them properly

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
         <P>It is objectively the best Letter</P>
     </div>
 </div>
+
+
 <div class="celebrities">
     <div class="celeb abe">
-    <h2 class="hidden">Abraham Lincoln</h2>
-        
+        <img src="./images/Abe.png" class="celeb-image">
     </div>
     <div class="celeb" >
 
